# AnnexOps

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  UPGRADE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_auth_tables.py  002_create_ai_system_tables.py  003_create_version_tables.py  004_create_evidence_tables.py  005_create_annex_tables.py  006_create_logging_tables.py  007_create_llm_tables.py  008_create_section_comment_tables.py
backend/scripts/: demo_walkthrough.py  seed_data.py
backend/src/: main.py
backend/src/api/: deps.py  middleware.py
backend/src/core/: common_passwords.txt  config.py  database.py  manifest.py  metrics.py  prompts.py  request_context.py  section_schemas.py  security.py  storage.py  structured_logging.py  version_workflow.py  wizard_questions.py
backend/src/models/: __init__.py  ai_system.py  annex_section.py  audit_event.py  base.py  decision_log.py  enums.py  evidence_item.py  evidence_mapping.py  export.py  high_risk_assessment.py  invitation.py  llm_interaction.py  log_api_key.py  organization.py  section_comment.py  system_attachment.py  system_version.py  user.py
backend/src/schemas/: ai_system.py  assessment.py  attachment.py  audit.py  auth.py  completeness.py  decision_event.py  errors.py  evidence.py  export.py  (+9 more)
backend/tests/: conftest.py
(+140 files in other folders)
